--- a/src/ustc/maomao/patterns/support/.gitignore
+++ b/src/ustc/maomao/patterns/support/.gitignore
@@ -14,3 +14,17 @@
 /PayBill.class
 /SpicyLevel.class
 /SweetLevel.class
+/OrderFood$1.class
+/OrderFood.class
+/test.class
+/test$1.class
+/OrderFood$2.class
+/OrderFood$3.class
+/OrderFood$4.class
+/OrderFood1.class
+/OrderFood1$1.class
+/OrderFood1$2.class
+/OrderFood1$3.class
+/Patron$1.class
+/Dialog.class
+/Dialog$1.class
